# sortedm2m-filter-horizontal-widget

./: .gitignore  AUTHORS.rst  CHANGES.rst  LICENSE.txt  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.py
example_project/: sortedm2m_filter_horizontal_widget
example_project/example_project/: asgi.py  settings.py  urls.py  wsgi.py
example_project/example_project/my_app/: admin.py  models.py
example_project/example_project/my_app/migrations/: 0001_initial.py
example_project/my_app/: admin.py  apps.py  models.py
example_project/my_app/migrations/: 0001_initial.py  0002_publisher_book_author.py
sortedm2m_filter_horizontal_widget/: __init__.py  forms.py
sortedm2m_filter_horizontal_widget/static/sortedm2m_filter_horizontal_widget/: OrderedSelectBox.js  OrderedSelectFilter.js  SelectAddButton.js  widget.css
sortedm2m_horizontal_filter_widget/: forms.py
sortedm2m_horizontal_filter_widget/static/sortedm2m_horizontal_filter_widget/: OrderedSelectBox.js  OrderedSelectFilter.js
